--- a/index.html
+++ b/index.html
@@ -11,6 +11,22 @@
     <h2>For all your incorporated company needs</h2>
 
     <!-- First, create a form tag where our inputs will be nested -->
+    <form>
+      <label for ='fullname'>
+        <input id="fullname" type="text" name="fullname" placeholder="Enter Name" required>
+      </label>
+      <label for ='email'>
+        <input id="email" type="email" name="email" placeholder="Enter Email" required>
+      </label>
+      <label for ='phone'>
+        <input id="phone" type="tel" name="phone" placeholder="Enter Telephone (optional)">
+      </label>
+      <label for ='message'>
+        <textarea id="message" type="textarea" name="message" placeholder="Enter Message"></textarea>
+      </label>
+      <input type ="checkbox" id ="checkbox">
+      <input type="submit" id="submit">
+    </form>
 
 
       <!-- Add a label for 'fullname'-->
